[package]
name = "rust-gmw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = { version = "0.5.5", features = ["serde"] }
futures = "0.3.30"
rand = "0.8.5"
ring = "0.17.8"
serde = "1.0.200"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
